--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,12 @@
 <header class="Header">
   <div class="pure-menu pure-menu-horizontal">
+    <p class="pure-menu-heading Header-logo">We'll fix your words</p>
     <ul class="pure-menu-list">
+    <li class="pure-menu-item">
+      <a class="pure-menu-link Header-link Header-site-page" href="index.html">Home</a>
     </li>
+    <li class="pure-menu-item">
+      <a class="pure-menu-link Header-link Header-site-page" href="contact.html">Contact</a>
     </li>
     </ul>
   </div>
