--- a/index.css
+++ b/index.css
@@ -4,8 +4,8 @@ body {
 }
 
 #layout {
-	margin-top: 40px;
 	position: relative;
+  background: url(assets/images/notebook.jpg) center center no-repeat;
 }
 
 .Header {
@@ -17,16 +17,18 @@ body {
 
   position: fixed;
   top: 0;
+  font-weight: bold;
+  background: rgba(0,0,0,0);
 }
 
-.Header-logo {
+.Header .pure-menu-heading {
 	color: black;
 	font-weight: bold;
 	padding: 0 20px;
   border-right: 1px solid #dddddd;
 }
 
-.Header-link {
+.Header .pure-menu-link {
   color: #808184;
   text-decoration: none;
   height: 40px;
@@ -34,25 +36,21 @@ body {
   padding: 0 20px;
 }
 
-.Header-link:hover {
-  color: #2B2B2B;
+.Header .pure-menu-link:hover {
+  transition: color 2s cubic-bezier(0.24,.8,.55,.94);
+  color: black;
   text-decoration: underline;
+  background-color: white;
 }
 
-.Header-link.active {
-  color: #2B2B2B;
-  border-bottom: solid 5px #009cde;
-}
-
-.Header-fadeIn {
-  opacity: 0;
-  -webkit-animation: Header-fadeIn--keyframes 3s 0.3s forwards;
-  animation: Header-fadeIn--keyframes 3s 0.3s forwards;
+.Header .pure-menu-link.active {
+  color: #009cde;
 }
 
 .content {
-	padding: 10px 20%;
+	padding: 40px 20%;
 	height: 100%;
+  
 }
 
 hr {
