--- a/index.css
+++ b/index.css
@@ -18,14 +18,15 @@ body {
   position: fixed;
   top: 0;
   font-weight: bold;
-  background: rgba(0,0,0,0);
+  opacity: 0.7;
+  background-color: #000;
 }
 
 .Header .pure-menu-heading {
-	color: black;
+	color: #808184;
 	font-weight: bold;
 	padding: 0 20px;
-  border-right: 1px solid #dddddd;
+  border-right: 1px solid #808184;
 }
 
 .Header .pure-menu-link {
@@ -37,10 +38,9 @@ body {
 }
 
 .Header .pure-menu-link:hover {
-  transition: color 2s cubic-bezier(0.24,.8,.55,.94);
-  color: black;
-  text-decoration: underline;
-  background-color: white;
+  transition: color 1s cubic-bezier(0.24,.8,.55,.94);
+  color: white;
+  background-color: rgba(0,0,0,0);
 }
 
 .Header .pure-menu-link.active {
@@ -49,8 +49,7 @@ body {
 
 .content {
 	padding: 40px 20%;
-	height: 100%;
-  
+	height: 100%; 
 }
 
 hr {
