--- a/index.css
+++ b/index.css
@@ -1,18 +1,19 @@
 body {
 	font-family: Lato;
 	box-sizing: border-box;
-}
-
-#layout {
-	position: relative;
+  display:flex;
+  flex-direction: column;
+  position: relative;
   background: url(assets/images/notebook.jpg) center center no-repeat;
 }
 
-.Header {
-  display: flex;
-  align-items: center;
+.flex-item {
+  flex: 0 1 30px;
+}
 
-  height: 40px;
+.Header {
+  display: flex 0 1 auto;
+  align-items: center;
   width: 100%;
 
   position: fixed;
@@ -48,6 +49,7 @@ body {
 }
 
 .content {
+  flex: 1 1 auto;
 	padding: 40px 20%;
 	height: 100%; 
 }
@@ -55,4 +57,15 @@ body {
 hr {
   height: 2px;
   background-color: #009cde;
+}
+
+footer {
+  flex: 0 1 40px;
+  align-items: center;
+  width: 100%;
+
+  font-weight: bold;
+  opacity: 0.7;
+  background-color: #000;
+
 }
