--- a/index.css
+++ b/index.css
@@ -4,7 +4,7 @@
 }
 
 body {
-  background: url(assets/images/notebook.jpg) center center no-repeat;
+  background: url(assets/images/notebook.jpg);
   background-size: cover;
 }
 
