Add wrapper to content
Not using this yet

--- a/_layouts/site.html
+++ b/_layouts/site.html
@@ -3,9 +3,10 @@
 {% include top.html %}
   <body>
     {% include header.html %}
+    <div class="wrapper">
+      {{ content }}
+    </div>
 
-    {{ content }}
-    
     {% include footer.html %}
   </body>
 </html>
