--- a/_includes/top.html
+++ b/_includes/top.html
@@ -2,7 +2,7 @@
   <meta charset="utf-8">
   <link rel="stylesheet" href="index.css">
   <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/pure-min.css">
-  <link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Sorts+Mill+Goudy' rel='stylesheet' type='text/css'>
 
   <title>{{ page.title }}</title>
 </head>
