--- a/index.css
+++ b/index.css
@@ -53,3 +53,14 @@
   opacity: 0.8;
   background-color: #000;  
 }
+
+a {
+  text-decoration: none;
+  font-weight: bold;
+  color: #009cde;
+}
+
+a:hover {
+  transition: color .6s cubic-bezier(0.24,.8,.55,.94);
+  color: #808184;
+}
