--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
-<header class="Header grey-text transparent-black-background">
+<header class="grey-text transparent-black-background">
   <div class="pure-menu pure-menu-horizontal">
     <p class="pure-menu-heading">We'll fix your words</p>
     <ul class="pure-menu-list">
